--- a/templates/partials/_navigation.html.twig
+++ b/templates/partials/_navigation.html.twig
@@ -1,24 +1,18 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark ">
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse text-center" id="navbarNavDropdown">
-        <ul class="navbar-nav">
-            <li class="nav-item active">
-                <a class="nav-link" href="{{ path('app_accueil') }}">Accueil</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="{{ path('app_articles') }}">Articles</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="{{ path('app_categorie') }}">Categorie</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="{{ path('admin') }}">Dashboard</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="{{ path('app_contact') }}">Contact</a>
-            </li>
-        </ul>
+<nav class="navbar navbar-expand-lg bg-light">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="#">FC-Tourisme</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#">Accueil</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#">Etablissement</a>
+                </li>
+            </ul>
+        </div>
     </div>
 </nav>
