--- a/templates/partials/_navigation.html.twig
+++ b/templates/partials/_navigation.html.twig
@@ -10,7 +10,7 @@
                     <a class="nav-link active" aria-current="page" href="#">Accueil</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Etablissement</a>
+                    <a class="nav-link active" aria-current="page" href="{{ path('app_etablissement') }}">Etablissement</a>
                 </li>
             </ul>
         </div>
