--- a/templates/partials/_navigation.html.twig
+++ b/templates/partials/_navigation.html.twig
@@ -12,7 +12,23 @@
                 <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="{{ path('app_etablissement') }}">Etablissement</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="{{ path('app_etablissement') }}">Etablissement</a>
+                </li>
             </ul>
+            <ul class="navbar-nav  mb-2 mb-lg-0">
+                {% if is_granted('IS_AUTHENTICATED_FULLY') %}
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="{{ path('app_logout') }}">Deconnexion</a>
+                    </li>
+                    <span class="navbar-text">{{ app.user.pseudo }}</span>
+                {% else %}
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="{{ path('app_security') }}">Connexion</a>
+                    </li>
+                {% endif %}
+            </ul>
+
         </div>
     </div>
 </nav>
