--- a/templates/etablissement/etablissementInformation.html.twig
+++ b/templates/etablissement/etablissementInformation.html.twig
@@ -11,7 +11,13 @@
                     <div class="card card-block ">
                         <img class="card-img-top" src="{{ etablissement.Image }}" style="width: 100%" alt="Card image">
                         <div class="card-block">
-                            <h4 class="card-title text-center mt-4 ">{{ etablissement.Nom }}</h4>
+                            <h4 class="card-title text-center mt-4 ">{{ etablissement.Nom }}
+                                {% if etablissement in app.user.getFavoris %}
+                                    <a href="{{ path('app_etablissement_favoris_slug', {slug : etablissement.slug}) }}" class="text-decoration-none"><i class="bi bi-star-fill text-warning"></i></a>
+                                {% else %}
+                                    <a href="{{ path('app_etablissement_favoris_slug', {slug : etablissement.slug}) }}" class="text-decoration-none"><i class="bi bi-star "></i></a>
+                                {% endif %}
+                            </h4>
                             <p class="card-text">{{ etablissement.Description }}</p>
                             <p class="card-text text-center ">{{ etablissement.AdressePostale }} {{ etablissement.ville.CodePostale }} {{ etablissement.ville.nom}} </p>
                             <p class="card-text text-center ">Email: {{etablissement.AdresseMail}} Téléphone : {{etablissement.NumeroTelephone }}  </p>
