--- a/templates/etablissement/etablissements.html.twig
+++ b/templates/etablissement/etablissements.html.twig
@@ -15,7 +15,16 @@
                 <div class="card card-block mb-4">
                     <img class="card-img-top" src="{{ etablissement.Image }}"  alt="Card image">
                     <div class="card-block mt-4 text-center">
-                        <h4 class="card-title ">{{ etablissement.Nom }}</h4>
+                    <h4 class="card-title ">{{ etablissement.Nom }}
+                        {% if is_granted('IS_AUTHENTICATED_FULLY') %}
+                            {% if etablissement in app.user.getFavoris %}
+                                <i class="bi bi-star-fill text-warning"></i>
+                                {% else %}
+                                <i class="bi bi-star "></i>
+                            {% endif %}
+                        {% endif %}
+                    </h4>
+
                         <p class="card-text">{{ etablissement.Description |slice(0,75) }}</p>
                         <p class="card-text">{{ etablissement.ville.CodePostale }} {{ etablissement.ville.nom}} </p>
                         <p class="card-text">
