--- a/templates/partials/_navigation.html.twig
+++ b/templates/partials/_navigation.html.twig
@@ -12,9 +12,11 @@
                 <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="{{ path('app_etablissement') }}">Etablissement</a>
                 </li>
+                {% if is_granted('IS_AUTHENTICATED_FULLY') %}
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="{{ path('app_etablissement') }}">Etablissement</a>
+                    <a class="nav-link active" aria-current="page" href="{{ path('app_etablissement_favoris') }}">Favoris</a>
                 </li>
+                {% endif %}
             </ul>
             <ul class="navbar-nav  mb-2 mb-lg-0">
                 {% if is_granted('IS_AUTHENTICATED_FULLY') %}
